Use generated robots.txt instead of static file and About page update
Plus:
- Main Theme Update to v3.11.0
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/v3.10.0...v3.11.0
- Update Twemoji to v14.0.2
- Removing all command that moves or removes `robots.txt` and `robots_preview` in GitHub Actions and Netlify
- Changes on CSP Hashes

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,22 +7,22 @@
     TZ = "Asia/Jakarta"
 
 [context.production]
-    command = "rm static/robots_preview; hugo --minify --gc"
+    command = "hugo --minify --gc"
     [context.production.environment]
         HUGO_ENV = "production"
 
 [context.split1]
-    command = "rm static/robots_preview; hugo --minify --gc"
+    command = "hugo --minify --gc"
     [context.split1.environment]
         HUGO_ENV = "production"
 
 [context.deploy-preview]
-    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify --buildFuture -b ${DEPLOY_PRIME_URL}"
+    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; hugo --gc --minify --buildFuture -b ${DEPLOY_PRIME_URL}"
     [context.deploy-preview.environment]
         HUGO_ENV = "staging"
 
 [context.branch-deploy]
-    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; mv static/robots_preview static/robots.txt; hugo --gc --minify -b ${DEPLOY_PRIME_URL}"
+    command = "rm -rf static/*.txt static/*.xml static/google*.html static/_redirects; hugo --gc --minify -b ${DEPLOY_PRIME_URL}"
     [context.branch-deploy.environment]
         HUGO_ENV = "staging"
 
