--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -7,6 +7,7 @@ enableGitInfo: true
 content-dir: content
 timeout: 1200000
 timeZone: Asia/Jakarta
+enableRobotsTXT: true
 
 defaultContentLanguage: id
 
