Article Updates and Disable Main Script and Style Inlining
Plus:
Change some Headers in `server.yaml`

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -88,9 +88,9 @@ comments:
     lazyLoad: intersectionObserver
 
 script:
-  inlineScript: true
+  inlineScript: false
   SRIHash: true
 
 style:
-  inlineStyle: true
-  SRIHash: false
+  inlineStyle: false
+  SRIHash: true
