--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -41,7 +41,7 @@ markup:
     codeFences: true
     guessSyntax: true
     lineNoStart: 1
-    lineNos: true
+    lineNos: false
     lineNumbersInTable: true
     tabWidth: 4
   goldmark:
