--- a/config/development/server.yaml
+++ b/config/development/server.yaml
@@ -120,7 +120,7 @@ headers:
       'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo=' 'sha256-8r2wkNd7y5t42rwVYQq1N86jT4H+QpO/L30lmmVGGcs='
       'sha256-De7agAeYqm6ANIVvRRW6HFWi52AJW8inhFE0gSdgXnI=';
       font-src 'self';
-      img-src data: 'self' https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/;
+      img-src 'self' https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/;
       base-uri 'self';
       connect-src 'self';
       object-src 'none';
@@ -131,7 +131,7 @@ headers:
       frame-ancestors 'none';
       manifest-src 'none';
       worker-src 'none';
-      prefetch-src https://cdn.statically.io/;
+      prefetch-src https://cdn.jsdelivr.net/;
       sandbox allow-scripts allow-forms allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation allow-downloads
 
 # CSP for main pages
@@ -146,7 +146,7 @@ headers:
 #       style-src 'self' 'unsafe-inline' 'unsafe-hashes'
 #      'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=';
 #      font-src 'self';
-#      img-src data: 'self';
+#      img-src 'self';
 #      base-uri 'self';
 #      connect-src 'self';
 #      object-src 'none';
@@ -157,5 +157,5 @@ headers:
 #      frame-ancestors 'none';
 #      manifest-src 'none';
 #      worker-src 'none';
-#      prefetch-src https://cdn.statically.io/;
+#      prefetch-src https://cdn.jsdelivr.net/;
 #      sandbox allow-scripts allow-forms allow-same-origin allow-popups
