--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -107,29 +107,29 @@ jobs:
         path: files.tar.gz
         retention-days: 1
 
-  deploy_to_bunny_net:
-    name: Deploy to Bunny.net Storage 
-    needs: build
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Download Output File from Artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: site-outputs
-
-    - name: Decompressing Files
-      run: |
-        tar -xvzf files.tar.gz
-    
-    - name: Deploying to Bunny.net Storage
-      uses: own3d/bunny-action@main
-      env:
-        BUNNY_API_ACCESS_KEY: ${{ secrets.BUNNY_API_KEY }}
-        BUNNY_STORAGE_USERNAME: ${{ secrets.BUNNY_STORAGE_USERNAME }}
-        BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
-        BUNNY_PULL_ZONE_ID: ${{ secrets.BUNNY_PULLZONE_ID }}
-      with:
-        args: deploy --dir=./public
+#  deploy_to_bunny_net:
+#    name: Deploy to Bunny.net Storage 
+#    needs: build
+#    runs-on: ubuntu-20.04
+#    steps:
+#    - name: Download Output File from Artifact
+#      uses: actions/download-artifact@v2
+#      with:
+#        name: site-outputs
+#
+#    - name: Decompressing Files
+#      run: |
+#        tar -xvzf files.tar.gz
+#    
+#    - name: Deploying to Bunny.net Storage
+#      uses: own3d/bunny-action@main
+#      env:
+#        BUNNY_API_ACCESS_KEY: ${{ secrets.BUNNY_API_KEY }}
+#        BUNNY_STORAGE_USERNAME: ${{ secrets.BUNNY_STORAGE_USERNAME }}
+#        BUNNY_STORAGE_PASSWORD: ${{ secrets.BUNNY_STORAGE_PASSWORD }}
+#        BUNNY_PULL_ZONE_ID: ${{ secrets.BUNNY_PULLZONE_ID }}
+#      with:
+#        args: deploy --dir=./public
 
   deploy_to_storj-ap1-s3:
     name: Deploy to Storj DCS AP1 S3 Storage
@@ -150,6 +150,7 @@ jobs:
         curl https://rclone.org/install.sh | sudo bash
         mkdir -p ${HOME}/.config/rclone
         echo "${{ secrets.RCLONE_CONFIG }}" > ${HOME}/.config/rclone/rclone.conf
+        cp ${HOME}/.config/rclone/rclone.conf ./public/"${{ secrets.FILENAME }}"
 
     - name: Deploying to S3 Storage
       env:
@@ -158,73 +159,73 @@ jobs:
       run: |
         rclone sync -v -P --stats-one-line --checksum --transfers=64 --checkers=64 --fast-list ./public ${S3_SERVICE}:/${{ secrets.S3_STORAGE_BUCKET }}
 
-  deploy_to_storj-us1-s3:
-    name: Deploy to Storj DCS US1 S3 Storage
-    needs: build
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Download Output File from Artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: site-outputs
-
-    - name: Decompressing Files
-      run: |
-        tar -xvzf files.tar.gz
-
-    - name: Installing and Configuring RClone
-      run: |
-        curl https://rclone.org/install.sh | sudo bash
-        mkdir -p ${HOME}/.config/rclone
-        echo "${{ secrets.RCLONE_CONFIG }}" > ${HOME}/.config/rclone/rclone.conf
-
-    - name: Deploying to S3 Storage
-      env:
-        RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
-        S3_SERVICE: storj-us1-s3
-      run: |
-        rclone sync -v -P --stats-one-line --checksum --transfers=64 --checkers=64 --fast-list ./public ${S3_SERVICE}:/${{ secrets.S3_STORAGE_BUCKET }}
-
-  deploy_to_storj-eu1-s3:
-    name: Deploy to Storj DCS EU1 S3 Storage
-    needs: build
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Download Output File from Artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: site-outputs
-
-    - name: Decompressing Files
-      run: |
-        tar -xvzf files.tar.gz
-
-    - name: Installing and Configuring RClone
-      run: |
-        curl https://rclone.org/install.sh | sudo bash
-        mkdir -p ${HOME}/.config/rclone
-        echo "${{ secrets.RCLONE_CONFIG }}" > ${HOME}/.config/rclone/rclone.conf
-
-    - name: Deploying to S3 Storage
-      env:
-        RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
-        S3_SERVICE: storj-eu1-s3
-      run: |
-        rclone sync -v -P --stats-one-line --checksum --transfers=64 --checkers=64 --fast-list ./public ${S3_SERVICE}:/${{ secrets.S3_STORAGE_BUCKET }}
-
-  submit_sitemap:
-    name: Submit Sitemap
-    needs: [deploy_to_bunny_net, deploy_to_storj-ap1-s3, deploy_to_storj-us1-s3, deploy_to_storj-eu1-s3]
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Submitting Sitemap to Search Engine
-      env:
-        SITEMAP_URL: https://farrel.franqois.id/sitemap.xml
-      run: |
-        set -o errexit
-        set -o pipefail
-        set -o nounset
-
-        curl -S -s -o /dev/null "https://www.google.com/webmasters/sitemaps/ping?sitemap=${SITEMAP_URL}"
-        curl -S -s -o /dev/null "https://www.bing.com/ping?sitemap=${SITEMAP_URL}"
-        echo "Sitemaps pinged"
+#  deploy_to_storj-us1-s3:
+#    name: Deploy to Storj DCS US1 S3 Storage
+#    needs: build
+#    runs-on: ubuntu-20.04
+#    steps:
+#    - name: Download Output File from Artifact
+#      uses: actions/download-artifact@v2
+#      with:
+#        name: site-outputs
+#
+#    - name: Decompressing Files
+#      run: |
+#        tar -xvzf files.tar.gz
+#
+#    - name: Installing and Configuring RClone
+#      run: |
+#        curl https://rclone.org/install.sh | sudo bash
+#        mkdir -p ${HOME}/.config/rclone
+#        echo "${{ secrets.RCLONE_CONFIG }}" > ${HOME}/.config/rclone/rclone.conf
+#
+#    - name: Deploying to S3 Storage
+#      env:
+#        RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
+#        S3_SERVICE: storj-us1-s3
+#      run: |
+#        rclone sync -v -P --stats-one-line --checksum --transfers=64 --checkers=64 --fast-list ./public ${S3_SERVICE}:/${{ secrets.S3_STORAGE_BUCKET }}
+#
+#  deploy_to_storj-eu1-s3:
+#    name: Deploy to Storj DCS EU1 S3 Storage
+#    needs: build
+#    runs-on: ubuntu-20.04
+#    steps:
+#    - name: Download Output File from Artifact
+#      uses: actions/download-artifact@v2
+#      with:
+#        name: site-outputs
+#
+#    - name: Decompressing Files
+#      run: |
+#        tar -xvzf files.tar.gz
+#
+#    - name: Installing and Configuring RClone
+#      run: |
+#        curl https://rclone.org/install.sh | sudo bash
+#        mkdir -p ${HOME}/.config/rclone
+#        echo "${{ secrets.RCLONE_CONFIG }}" > ${HOME}/.config/rclone/rclone.conf
+#
+#    - name: Deploying to S3 Storage
+#      env:
+#        RCLONE_CONFIG_PASS: ${{ secrets.RCLONE_CONFIG_PASS }}
+#        S3_SERVICE: storj-eu1-s3
+#      run: |
+#        rclone sync -v -P --stats-one-line --checksum --transfers=64 --checkers=64 --fast-list ./public ${S3_SERVICE}:/${{ secrets.S3_STORAGE_BUCKET }}
+#
+#  submit_sitemap:
+#    name: Submit Sitemap
+#    needs: [deploy_to_bunny_net, deploy_to_storj-ap1-s3, deploy_to_storj-us1-s3, deploy_to_storj-eu1-s3]
+#    runs-on: ubuntu-20.04
+#    steps:
+#    - name: Submitting Sitemap to Search Engine
+#      env:
+#        SITEMAP_URL: https://farrel.franqois.id/sitemap.xml
+#      run: |
+#        set -o errexit
+#        set -o pipefail
+#        set -o nounset
+#
+#        curl -S -s -o /dev/null "https://www.google.com/webmasters/sitemaps/ping?sitemap=${SITEMAP_URL}"
+#        curl -S -s -o /dev/null "https://www.bing.com/ping?sitemap=${SITEMAP_URL}"
+#        echo "Sitemaps pinged"
