Articles, Page, Configuration and Theme Update
Comments:
- Activate giscus strict matching
- Change Input Position to Top

Server Configuration:
- Changes of CSP Report-Only Hash in `script-src`

Theme:
- Main Theme update to v3.13.0 from v3.12.0
- Modified Theme update

Misc.:
- Update several Articles and About Page
- `CONTRIBUTING.md` update

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -82,17 +82,19 @@ comments:
     category: Komentar Blog
     categoryID: DIC_kwDOFAiyoc4B_M30
     mapping: pathname
-    lang: id
+    strict: 1
+    inputPosition: top
     lightTheme: light
     darkTheme: dark_dimmed
     reactionsEnabled: 1
     emitMetadata: 0
-    lazyLoad: intersectionObserver
+    lazyLoad:
+      type: intersectionObserver
 
 script:
   inlineScript: false
-  SRIHash: true
+  sriHash: true
 
 style:
   inlineStyle: false
-  SRIHash: true
+  sriHash: true
