Article, Page, Site comments, and Shortcode updates
Articles/Pages:
- `info text=` -> `info title=`
- Several content changes

GitHub Actions:
- Simplify Hugo Setup and remove unnecessary configuration line for GitHub Actions
- Using `SHORT_SHA` variable for dynamic artifact naming
- Change Hugo Modules cache key and path
- Change Hugo build command

Shortcodes:
- Remove `.Get extended` in `hugo-version-long` shortcode
- Change `text` to `title` in `info` shortcode

Giscus:
- Using local file for giscus styles in production
- Switch giscus lazy-loading to Native from Intersection Observer

Site Configuration:
- Using `http://localhost` as default Base URL (not for production)
- Changes in CSP Report-Only Header

Netlify:
- Hugo version update to `0.102.3`

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -95,7 +95,7 @@ reactionsEnabled = 1
 emitMetadata = 0
 
 [comments.giscus.lazyLoad]
-type = "intersectionObserver"
+type = "native"
 
 [script]
 inlineScript = false
