--- a/config/production/params.toml
+++ b/config/production/params.toml
@@ -22,3 +22,7 @@ widgetId = "D1Tc1z8H"
 enabled = false
 username = "FarrelF"
 utcOffset = 7
+
+[comments.giscus]
+lightTheme = "css/giscus-themes/light.css"
+darkTheme = "css/giscus-themes/dark.css"
