--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,55 +28,36 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Install and Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: '^1.17.3'
-
-    - name: Install and Set up Locales and Other Packages
+    - name: Install and Setup Locales and Other Packages
       run: |
-        # case "$(curl -s --max-time 3 -I http://azure.archive.ubuntu.com | sed 's/^[^ ]*  *\([0-9]\).*/\1/; 1q')" in
-        #   [23]) echo "The Repository HTTP Server is up"
-        #         if nc -zw3 azure.archive.ubuntu.com 80; then
-        #           echo "The Repository Server has been connected successfully"
-        #         else
-        #           echo "The Repository server is down, changing the Repository Server. Please wait....."
-        #           sudo sed -i 's|http://azure.archive.ubuntu.com/ubuntu/|https://mirror.b-cdn.net/ubuntu/|g' /etc/apt/sources.list
-        #           sudo sed -i 's|http://security.ubuntu.com/ubuntu|https://mirror.b-cdn.net/ubuntu/|g' /etc/apt/sources.list
-        #           sudo sed -i 's|http://ppa.launchpad.net|https://mirrorppa.b-cdn.net|g' /etc/apt/sources.list.d/*.list
-        #         fi;;
-        #   *) echo "The Repository HTTP Server is down, changing the Repository Server. Please wait....."
-        #      sudo sed -i 's|http://azure.archive.ubuntu.com/ubuntu/|https://mirror.b-cdn.net/ubuntu/|g' /etc/apt/sources.list
-        #      sudo sed -i 's|http://security.ubuntu.com/ubuntu|https://mirror.b-cdn.net/ubuntu/|g' /etc/apt/sources.list
-        #      sudo sed -i 's|http://ppa.launchpad.net|https://mirrorppa.b-cdn.net|g' /etc/apt/sources.list.d/*.list;;
-        # esac
         sudo sh -c 'apt update; apt install -y locales locales-all pigz'
-        sudo sed -i 's/id_ID\s.*$/id_ID id_ID.utf8/g' /usr/share/locale/locale.alias
-        sudo sed -i 's/# id_ID\.UTF-8/id_ID\.UTF-8/' /etc/locale.gen
         sudo update-locale LANG=C.UTF-8 LC_MESSAGES=POSIX
-        DEBIAN_FRONTEND=noninteractive sudo -E dpkg-reconfigure locales
         sudo ln -sf /usr/share/zoneinfo/${TZ} /etc/localtime
 
-    - name: Install and Set up Hugo Extended
-      run: |
-        HUGO_VERSION="$(curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | grep tag_name | cut -d 'v' -f2 | cut -d'"' -f1)"
-        cd /tmp/
-        wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-        tar -xzf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
-        chmod +x hugo
-        sudo -- sh -c 'mv hugo /usr/local/bin/; chown root:root /usr/local/bin/hugo'
-        rm hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz LICENSE README.md
-        cd ${GITHUB_WORKSPACE}
-        which hugo && hugo version
-        # find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}' > Images.list
-        # sha256sum $(cat Images.list) > Images.hash.list
-        # git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
+    - name: Setup Hugo Extended
+      uses: peaceiris/actions-hugo@v2
+      with:
+        hugo-version: latest
+        extended: true
+    #- name: Install and Set up Hugo Extended
+    #  run: |
+    #    HUGO_VERSION="$(curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | grep tag_name | cut -d 'v' -f2 | cut -d'"' -f1)"
+    #    cd /tmp/
+    #    wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
+    #    tar -xzf hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz
+    #    chmod +x hugo
+    #    sudo -- sh -c 'mv hugo /usr/local/bin/; chown root:root /usr/local/bin/hugo'
+    #    rm hugo_extended_${HUGO_VERSION}_Linux-64bit.tar.gz LICENSE README.md
+    #    cd ${GITHUB_WORKSPACE}
+    #    which hugo && hugo version
+    #    # find ./content -type f -exec file {} \; | awk -F: '{ if ($2 ~/[Ii]mage|EPS/) print $1}' > Images.list
+    #    # sha256sum $(cat Images.list) > Images.hash.list
+    #    # git ls-tree -rtl HEAD:layouts --full-tree > layouts-tree.hash
 
     - name: Set up Hugo Resources Cache
       uses: actions/cache@v3
       with:
-        path: |
-          ./resources
+        path: ./resources
         key: v2-5-hugo-preview
         restore-keys: | 
           - v2-5-hugo-preview
@@ -84,17 +65,15 @@ jobs:
     - name: Set up Hugo Modules Cache
       uses: actions/cache@v3
       with:
-        path: |
-          ./cache/modules
-        key: v1-1-hugo-modules-${{ hashFiles('**/go.mod') }}-${{ hashFiles('**/go.sum') }}
+        path: /tmp/hugo_cache
+        key: ${{ runner.os }}-hugo-modules-preview-${{ hashFiles('**/go.sum') }}
         restore-keys: | 
-          - v1-1-hugo-modules-${{ hashFiles('**/go.mod') }}-${{ hashFiles('**/go.sum') }}
-          - v1-1-hugo-modules-${{ hashFiles('**/go.mod') }}-
+          - ${{ runner.os }}-hugo-modules-preview-${{ hashFiles('**/go.sum') }}
 
     - name: Building the Blog HTML (Preview)
       run: |
         rm -rf static/*.txt static/*.xml static/google*.html static/CNAME static/_redirects
-        hugo --gc --minify --buildFuture --environment staging --cacheDir ${PWD}/cache -b https://deploy-preview.farrel.franqois.id
+        hugo --gc --buildFuture --environment staging -b https://deploy-preview.farrel.franqois.id
 
     - name: Compressing Static Web Files
       run: |
@@ -105,7 +84,7 @@ jobs:
     - name: Upload Output File to Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: site-outputs
+        name: preview-build-result-${{ env.SHORT_SHA }}
         path: files.tar.gz
         retention-days: 1
 
@@ -117,7 +96,7 @@ jobs:
     - name: Download Output File from Artifact
       uses: actions/download-artifact@v3
       with:
-        name: site-outputs
+        name: preview-build-result-${{ env.SHORT_SHA }}
 
     - name: Decompressing Files
       run: |
@@ -141,7 +120,7 @@ jobs:
     - name: Download Output File from Artifact
       uses: actions/download-artifact@v3
       with:
-        name: site-outputs
+        name: preview-build-result-${{ env.SHORT_SHA }}
 
     - name: Decompressing Files
       run: |
@@ -168,7 +147,7 @@ jobs:
     - name: Download Output File from Artifact
       uses: actions/download-artifact@v3
       with:
-        name: site-outputs
+        name: preview-build-result-${{ env.SHORT_SHA }}
 
     - name: Decompressing Files
       run: |
@@ -195,7 +174,7 @@ jobs:
     - name: Download Output File from Artifact
       uses: actions/download-artifact@v3
       with:
-        name: site-outputs
+        name: preview-build-result-${{ env.SHORT_SHA }}
 
     - name: Decompressing Files
       run: |
@@ -222,7 +201,7 @@ jobs:
     - name: Download Output File from Artifact
       uses: actions/download-artifact@v3
       with:
-        name: site-outputs
+        name: preview-build-result-${{ env.SHORT_SHA }}
 
     - name: Decompressing Files
       run: |
