--- a/config/development/server.toml
+++ b/config/development/server.toml
@@ -7,6 +7,7 @@ X-Content-Type-Options = "nosniff"
 X-Frame-Options = "DENY"
 Referrer-Policy = "strict-origin-when-cross-origin"
 Cache-Control = "public, max-age=31536000, immutable"
+Access-Control-Allow-Origin = "*"
 
 [[headers]]
 for = "/*.json"
@@ -133,9 +134,9 @@ Content-Security-Policy-Report-Only = """
 default-src 'none';
 script-src 'self' https://giscus.app/client.js https://giscus.app/js/iframeResizer.min.js https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/
 'sha256-jgys9Z/hlriwC/SULrqh66L7kRPJwGJ3I1TY2J3XzKk=' 'sha256-4V8WxmH+ykIlGiV2pbQGmG3szs7GDgKIdFgCddG6ex0='
-'sha256-HyIh5rj6bY6tl40Rx55AbY4s5AyWHYzfOBOS0pmDSSE=' 'sha256-LxePw1MNwpBBGOXU5w3Hi4eP2h84rCHQAaEODlQ6Mso='
+'sha256-2fUKdVx0IqBIkSSqMiTkxBG8jGbNnTPFqpi8YcdgTIc=' 'sha256-xEa7e8R4lYYm6FeZyqIp2Ai/owzXZ8Ie6pB23yqi8Fg='
 'sha256-1f2J/64qgbhAZYGa37arGnks3NdW5ZME5MIAQLJnlMY=' 'sha256-Jgp4ajzqIBclmPp4JeS9/1SZLS8hmgwlIdjo0jHlZSY='
-'sha256-CY5oWMzbbw1oSfTE2eRxcI/lZoIjqXxJCEbxyOfvZak=';
+'sha256-P4cSqnCxUSomtJIrpQpw3e91n4BtQ/H163w+ktF1LjU=';
 style-src 'self' 'unsafe-hashes' https://cdn.jsdelivr.net/npm/photoswipe@4.1.3/dist/
 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=' 'sha256-AN/BwYzHD/GnCad3utJZUlQ8jiR4MDFg5++YjWHDnaQ='
 'sha256-MbtVhF2YYaQ+jxjj/xmHw3IdSfL/52aKP0AZyGBTmPo=' 'sha256-8r2wkNd7y5t42rwVYQq1N86jT4H+QpO/L30lmmVGGcs='
@@ -165,7 +166,7 @@ sandbox allow-scripts allow-forms allow-same-origin allow-popups allow-popups-to
 #default-src 'none';
 #script-src 'self' 'unsafe-inline'
 #'sha256-jgys9Z/hlriwC/SULrqh66L7kRPJwGJ3I1TY2J3XzKk=' 'sha256-4V8WxmH+ykIlGiV2pbQGmG3szs7GDgKIdFgCddG6ex0='
-#'sha256-HyIh5rj6bY6tl40Rx55AbY4s5AyWHYzfOBOS0pmDSSE=' 'sha256-LxePw1MNwpBBGOXU5w3Hi4eP2h84rCHQAaEODlQ6Mso='
+#'sha256-2fUKdVx0IqBIkSSqMiTkxBG8jGbNnTPFqpi8YcdgTIc=' 'sha256-xEa7e8R4lYYm6FeZyqIp2Ai/owzXZ8Ie6pB23yqi8Fg='
 #'sha256-1f2J/64qgbhAZYGa37arGnks3NdW5ZME5MIAQLJnlMY=';
 #style-src 'self' 'unsafe-inline' 'unsafe-hashes' 'sha256-P50WYSNZB+t5bw7NvQOJjx1SOTbBTDThDWu5rHUHV8o=';
 #font-src 'self';
