--- a/config/development/server.toml
+++ b/config/development/server.toml
@@ -8,6 +8,7 @@ X-Frame-Options = "DENY"
 Referrer-Policy = "strict-origin-when-cross-origin"
 Cache-Control = "public, max-age=31536000, immutable"
 Access-Control-Allow-Origin = "*"
+Access-Control-Allow-Private-Network = "true"
 
 [[headers]]
 for = "/*.json"
