Try to Fix Directory Error [skip ci]

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,8 +17,7 @@ RUN apt update && apt install -y ca-certificates openssl git curl && \
     echo ${VERSION} && \
     wget -O ${VERSION}.tar.gz https://github.com/gohugoio/hugo/releases/download/v${VERSION}/${VARIANT}_${VERSION}_Linux-64bit.tar.gz && \
     tar xf ${VERSION}.tar.gz && \
-    install -Dm755 hugo /usr/local/bin/ \
-    install -Dm644 LICENSE /usr/share/licenses/hugo/LICENSE
+    install -Dm755 hugo /usr/local/bin/
 
 # Install Hugo Manpages and Shell Completions
 RUN hugo gen man --dir '/tmp/hugo_manpages' \
@@ -26,8 +25,7 @@ RUN hugo gen man --dir '/tmp/hugo_manpages' \
     install -Dm644 * -t /usr/local/man/man1 \
     cd - && rm -rf /tmp/hugo_manpages \
     hugo completion bash | install -Dm644 /dev/stdin "/usr/share/bash-completion/completions/hugo" \
-    hugo completion zsh | install -Dm644 /dev/stdin "/usr/share/zsh/site-functions/_hugo" \
-    hugo completion fish | install -Dm644 /dev/stdin "/usr/share/fish/vendor_completions.d/hugo.fish"
+    hugo completion zsh | install -Dm644 /dev/stdin "/usr/share/zsh/site-functions/_hugo"
 
 # Hugo dev server port
 EXPOSE 1313
